# phantom_words_project

./: .gitignore  README.md  pyproject.toml  run.py
.junie/: guidelines.md
src/: __init__.py  app.py
src/assets/: audio_processor.js  custom_styles.css
src/audios/: creacion_audios.py
