[tool.poetry]
name = "phantomwords"
version = "0.1.0"
description = ""
authors = ["esteban_laptop_exotic <raulest50@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
dash = "^2.14.2"
dash-bootstrap-components = "^1.5.0"
plotly = "^5.18.0"
pandas = "^2.2.3"
gtts = "^2.5.4"

[tool.poetry.scripts]
dashboard = "run:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
